[package]
name = "sqlite-parser-nom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.1"
thiserror = "1.0.38"

[dev-dependencies]
rusqlite = { version = "0.28.0", features = ["bundled"] }
tempfile = "3.3.0"