[package]
name = "sqlite-parser"
version = "0.1.0"
authors = ["Andrew Korzhuev <korzhuev@andrusha.me>"]
edition = "2021"
description = "SQLite database file parser"
repository = "https://github.com/mycelial/sqlite-parser"
documentation = "http://docs.rs/sqlite-parser/"
readme = "README.md"
keywords = ["sqlite", "database", "nom", "parser"]
license = "Apache-2.0"
categories = ["database", "parser-implementations"]

[dependencies]
nom = "7.1.1"
thiserror = "1.0.38"

[dev-dependencies]
rusqlite = { version = "0.28.0", features = ["bundled"] }
tempfile = "3.3.0"